[gd_scene load_steps=3 format=3 uid="uid://eb8t127lueuw"]

[ext_resource type="FontFile" uid="uid://cg67qiwx24xxd" path="res://fonts/Xolonium-Regular.ttf" id="1_2rlw6"]
[ext_resource type="Script" uid="uid://bybh4uomlxwlj" path="res://game_over_hud.gd" id="1_gu0hb"]

[node name="GameOverHUD" type="CanvasLayer"]
script = ExtResource("1_gu0hb")

[node name="Text" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -260.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_2rlw6")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="TotalScore" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 275.0
offset_bottom = 353.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_2rlw6")
theme_override_font_sizes/font_size = 64
text = "Score: "
horizontal_alignment = 1

[node name="BestScore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.5
offset_top = 40.0
offset_right = 200.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_2rlw6")
theme_override_font_sizes/font_size = 64
text = "Best score: "

[node name="Return" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -140.0
offset_right = 98.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_2rlw6")
theme_override_font_sizes/font_size = 64
text = "Try again?"

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
